MixinLibrary: Remove custom jlist renderer, allowing type to search. Make ME3 launch with correct working directory. Change game launch to have a 3s delay before minimization, remove command prompt window